# epoch

./: README.md  com.github.Suzie97.epoch.yml  meson.build
.github/workflows/: build.yml  lint.yml
data/: Updating label in Gtk.MenuButton.md  epoch.appdata.xml  epoch.desktop  gschema.xml  ideas.md  meson.build
meson/: post_install.py
src/: Application.vala  MainWindow.vala
src/Controllers/: geocoding.vala
src/Dialogs/: PreferencesDialog.vala
src/Views/: MainView.vala  PreferencesView.vala
src/Widgets/: CitiesChooser.vala  CitiesRow.vala  CitiesSearch.vala  ClockFaces.vala  Labels.vala  Labels.vala~  Parser.vala  TimeZonePicker.vala
